Retrieve data from MongoDB
* Add mongo logger
* Add Embedded MongoDB for integration tests
* Add type field to company entity
* Remove unnecessary endpoints to /statusinvest parent
* Replaced directly call from StatusInvest to MongoDB
* New methods from repo mongo company entity
* Tests
* New test annotation structure
* Add a Global exception handler (deal if illegarargument)